# genvarloader-cli

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: bump.yaml  merge.yaml  publish.yaml
src/genvarloader_cli/: __init__.py  __main__.py
